# llvm-mos-sdk

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: package.yml
cmake/modules/: BootstrapCompiler.cmake  DetectCompiler.cmake  Platforms.cmake  TargetHost.cmake  TargetMOS.cmake
cmake/modules/Platform/: llvm-mos.cmake
common/ldscripts/: CMakeLists.txt  imag_regs.ld
common/lib/: CMakeLists.txt  mem.c
doc/: Design.md  Rationale.md
examples/cx16/: sprite.cc
examples/mega65/: CMakeLists.txt  charset.cc  parallax.cc
mos-platform/: CMakeLists.txt
mos-platform/cx16/: CMakeLists.txt  cx16.h  waitvsync.c
mos-platform/mega65/: CMakeLists.txt  _vic4.h  basic-header.S  link.ld
platform/sim/sim/: CMakeLists.txt
utils/sim/sim/: CMakeLists.txt
